--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A simple POC using workers to init the data layer of a flux app",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "run": "webpack-dev-server --content-base dist/",
+    "build": "webpack"
   },
   "keywords": [
     "flux",
@@ -14,19 +16,21 @@
   "author": "jangel",
   "license": "MIT",
   "devDependencies": {
-    "flux": "^2.0.3",
+    "babel": "^5.8.21",
+    "babel-core": "^5.8.21",
     "babel-eslint": "^4.0.5",
-    "express": "^4.13.3",
-    "mocha": "^2.2.5",
     "babel-loader": "^5.3.2",
+    "eslint": "^1.1.0",
+    "express": "^4.13.3",
+    "flux": "^2.0.3",
+    "mocha": "^2.2.5",
     "react": "^0.13.3",
     "webpack": "^1.11.0",
-    "eslint": "^1.1.0",
-    "babel-core": "^5.8.21",
-    "babel": "^5.8.21"
+    "webpack-dev-server": "^1.10.1"
   },
   "dependencies": {
     "eslint-config-airbnb": "0.0.7",
-    "eslint-plugin-react": "^3.2.1"
+    "eslint-plugin-react": "^3.2.1",
+    "express": "^4.13.3"
   }
 }
